# doodleray

./: .gitignore  analisvpnclient.md  package-lock.json  package.json  vite.config.ts  vpn_clients_research.md
.agent/workflows/: dev-setup.md
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  libsingbox.h  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/singbox-core/: go.mod  go.sum  main.go
src-tauri/src/: ipc.rs  lib.rs  singbox.rs  sysproxy.rs  sysproxy_macos.rs  tun.rs  xray.rs
src/components/: ConfirmModal.tsx
src/components/dashboard/: ConnectionControls.tsx  LogsStrip.tsx  OnboardingCard.tsx  RetroBackground.tsx  ServerList.tsx  StatsPanel.tsx
src/components/layout/: Sidebar.tsx
src/lib/: config-generator.ts  connect-helpers.ts  constants.ts  parser.ts  subscription.ts  utils.ts  workshop-api.ts
src/locales/: index.ts
src/pages/: Dashboard.tsx  Routing.tsx  Servers.tsx  Settings.tsx  Workshop.tsx
src/stores/: app-store.ts  toast-store.ts  workshop-store.ts
