[package]
name = "tauri-app"
version = "3.5.0"
description = "DoodleRay VPN Client"
authors = ["DoodleVPN"]
edition = "2021"
default-run = "DoodleRay"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "DoodleRay"
path = "src/main.rs"

[[bin]]
name = "service"
path = "src/bin/service.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.7"
ctrlc = "3"

# Windows-only dependencies
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
winreg = "0.52"
